<resources>
    <string name="app_name">AppPreCafeteria</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="primer_plat">Primer plat</string>
    <string name="_0">0</string>
    <string name="quantitat">Quantitat</string>
    <string name="_10">10€</string>
    <string name="beguda">Beguda</string>
    <string name="_2">2€</string>
    <string name="total">Total</string>
    <string name="primer_plat2">Primer plat:</string>
    <string name="beguda2">Beguda:</string>
    <string name="total2">Total:</string>
    <string name="plat_1_0">Plat 1 - 0 €</string>
    <string name="beguda_1_0">Beguda 1 - 0€</string>
    <string name="_02">0€</string>
</resources>