<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PrimerPlatFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputPrimerPlat"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="266dp"
        android:layout_height="73dp"
        android:layout_marginTop="128dp"
        android:hint="@string/primer_plat"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/editTextPrimerPlat"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:inputType="text"
            android:textColorHint="#757575" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputQuantitat"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="140dp"
        android:layout_height="66dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="32dp"
        android:hint="@string/quantitat"
        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/buttonArrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputPrimerPlat"
        app:layout_constraintVertical_bias="0.064">

        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/editTextQuantitat"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:inputType="text"
            android:textColorHint="#757575" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textViewPreu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/_10"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.388"
        app:layout_constraintStart_toEndOf="@+id/textInputQuantitat"
        app:layout_constraintTop_toBottomOf="@+id/textInputPrimerPlat" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/buttonArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.749"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPreu"
        app:layout_constraintVertical_bias="0.202"
        app:srcCompat="@drawable/double_right_arrow" />


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>